[package]
name = "rust-web-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
ipgeolocate = "0.3.5"
serde = "1.0.148"
[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]